Add '26.1.2-rc-1' sources